<resources>
    <string name="app_name">TravelApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="masuk">MASUK</string>
    <string name="sadam">Sadam</string>
    <string name="bri_bank_rakyat_indonesia">BRI (Bank Rakyat Indonesia)</string>
    <string name="atm">696601007989532</string>
    <string name="nama_penerima">Nama Penerima :</string>
    <string name="nama_bank">Nama Bank :</string>
    <string name="no_rekening">No Rekening :</string>
    <string name="pesantransfer">Mohon untuk melakukkan transfer ke Rekening dibawah ini :</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="detail">Detail</string>
    <string name="lanjutkan">lanjutkan</string>
    <string name="pesan_konfirmasi">Silahan konfirmasi segera pesanan anda</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="dashboard">Dashboard</string>
    <string name="pesanan">Pesanan</string>
    <string name="akun">Akun</string>
    <string name="norek">696601007989532</string>

    <string name="pesan_konfirmasi_bukti">
        Tolong,untuk melakukan pengungahaan bukti pembayaran untuk menyelesaikan pemesanan.
    </string>
    <string name="kota_pilihan">Kota Pilihan</string>
    <string name="jakarta">Jakarta</string>
    <string name="bandung">Bandung</string>
    <string name="bekasi">Bekasi</string>
    <string name="tangerang">Tangerang</string>
    <string name="batang">Batang</string>
    <string name="semarang">Semarang</string>
    <string name="pekalongan">Pekalongan</string>
    <string name="cirebon">Cirebon</string>
    <string name="sukabumi">Sukabumi</string>
    <string name="jogja">Jogja</string>
    <string name="malang">Malang</string>
    <string name="surabaya">Surabaya</string>
    <string name="batalkan">Batalkan pesanan ini</string>
    <string name="nama">Nama   :</string>
    <string name="hp">Hp   :</string>
    <string name="daftar_sopir">Daftar Sopir</string>
</resources>